--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
   <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
 <body>
 <main>
   <div class="image">
-    <img src="avatar-jessica.jpeg">
+    <img src="assets/avatar-jessica.jpeg">
   </div>
   <div class="name">Jessica Randall</div>
   <div class="place">London, United Kingdom</div>
